--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,16 +13,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Flashcard"
         tools:targetApi="31">
+
         <activity
             android:name=".ui.activities.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
 
+        <activity android:name=".ui.activities.StudyActivity"
+            android:exported="true">
+
+        </activity>
+
+    </application>
 
 </manifest>
